--- a/src/NEventStore.Persistence.MongoDB/packages.config
+++ b/src/NEventStore.Persistence.MongoDB/packages.config
@@ -4,4 +4,5 @@
   <package id="MongoDB.Bson" version="2.0.1" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.0.1" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.0.1" targetFramework="net45" />
+  <package id="NEventStore" version="5.2.0" targetFramework="net45" />
 </packages>
